# modules/apps/webhooks/webhooks-rest-impl/rest-openapi.yaml
@@ -9,7 +9,9 @@ components:
                     description: The apiKey for the authentication
                     type: string
 info:
-    description: "WebhooksRest REST API"
+    description:
+        "WebhooksRest REST API. A Java client JAR is available for use with the group ID 'com.liferay', artifact ID
+        'com.liferay.headless.webhooks.client', and version '1.0.0'."
     license:
         name: "Apache 2.0"
         url: "http://www.apache.org/licenses/LICENSE-2.0.html"
@@ -21,6 +23,7 @@ paths:
         get:
             description:
                 Retrieves a Site's webhooks.
+            operationId: getSiteWebhooksPage
             parameters:
                 - in: path
                   name: siteId
@@ -36,10 +39,16 @@ paths:
                                 items:
                                     $ref: "#/components/schemas/Webhook"
                                 type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/Webhook"
+                                type: array
             tags: ["Webhook"]
         post:
             description:
                 Creates a new Webhook in a Site.
+            operationId: postSiteWebhook
             parameters:
                 - in: path
                   name: siteId
@@ -52,10 +61,16 @@ paths:
                     application/json:
                         schema:
                             $ref: "#/components/schemas/Webhook"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/Webhook"
             responses:
                 200:
                     content:
                         application/json:
+                            schema:
+                                $ref: "#/components/schemas/Webhook"
+                        application/xml:
                             schema:
                                 $ref: "#/components/schemas/Webhook"
             tags: [ "Webhook" ]
@@ -63,6 +78,7 @@ paths:
         delete:
             description:
                 Deletes the webhook and return a 204 if the operation succeeds.
+            operationId: deleteWebhook
             parameters:
                 - in: path
                   name: webhookId
@@ -78,6 +94,7 @@ paths:
         get:
             description:
                 Retrieves a Webhook.
+            operationId: getWebhook
             parameters:
                 - in: path
                   name: webhookId
